<resources>
    <!--app名-->
    <string name="app_name">掌上治水</string>

    <!--主要四页名-->
    <string name="tv_first_page">首页</string>
    <string name="tv_dynamic">动态</string>
    <string name="tv_message">消息</string>
    <string name="tv_my">我的</string>

    <string name="my_task_name">我的事务</string>
    <string name="history_record_name">巡河记录</string>
    <string name="my_river_name">我的河道</string>
    <string name= "collection_name">我的签到</string>
    <string name="click_to_login">点击登录</string>
    <string name="nickName">XXXX</string>
    <string name="tv_notice">消息通知</string>
    <string name="tv_set">系统设置</string>
    <string name="tv_date">2018-5-1</string>
    <string name="image">image</string>
    <string name="tv_bar_chart">直方图</string>
    <string name="tv_check_tel">验证手机号</string>
    <string name="tv_hint_ver_code">请输入验证码</string>
    <string name="tv_ver_code">验证码</string>
    <string name="tv_get_ver_code">获取验证码</string>
    <string name="tv_login">登录</string>
    <string name="tv_collect">tv_collect</string>
    <string name="tv_river_patrol">河湖巡查</string>
    <string name="tv_submit">提交</string>
    <string name="et_add_description">添加描述……</string>
    <string name="tv_nick_name">用户昵称</string>
    <string name="tv_time">2018-6-2 19:19:20</string>
    <string name="tv_choose_photo">添加图片</string>
    <string name="tv_next">下一步</string>
    <string name="tv_register">注册</string>
    <string name="tv_phone">手机号</string>
    <string name="tv_pasw">密码</string>
    <string name="tv_repasw">确认密码</string>
    <string name="tv_supervision">事件处理</string>
    <string name="tv_search_bluetooth">搜索蓝牙</string>
    <string name="tv_mobile_monitor">移动监测</string>
    <string name="tv_matched_device">已配对的设备</string>
    <string name="tv_can_use_device">可用设备</string>
    <string name="tv_bluetooth_name">Dumbo</string>
    <string name="tv_stop_search">停止搜索</string>
    <string name="tv_matching">正在配对……</string>
    <string name="tv_no_can_use_device">（未搜索到可用设备）</string>
    <string name="tv_login_and_agree">登录代表你同意</string>
    <string name="tv_protocol">用户协议</string>
    <string name="tv_and">和</string>
    <string name="tv_privacy_policy">隐私条款</string>
    <string name="tv_login_by_ver_code">短信验证码登录</string>
    <string name="tv_forget_password">忘记密码？</string>
    <string name="tv_my_attendance">我的签到</string>
    <string name="hint_input_pasw">请输入登录密码</string>
    <string name="hint_input_ver_code">请输入验证码</string>
    <string name="hint_input_your_number">请输入手机号</string>
    <string name="tv_help">帮助反馈</string>
    <string name="tv_map_monitor">云水质监测</string>
    <string name="tv_task">事件处理</string>
    <string name="tv_people_complain">群众投诉</string>
    <string name="tv_more">更多</string>
    <string name="tv_quick_info">河长快讯</string>
    <string name="tv_patrol_dynamic">巡河动态</string>
    <string name="tv_net_error">网络连接异常，请检查网络设置！</string>
    <string name="tv_water_quality_info">水质信息</string>
    <string name="tv_match_bluetooth">蓝牙匹配</string>
    <string name="tv_weibo">微博</string>
    <string name="tv_QQ">QQ</string>
    <string name="tv_weixin">微信</string>
    <string name="tv_quick_login">第三方账号登录</string>
    <string name="tv_daily_work">日常工作</string>
    <string name="tv_problem_record">问题记录</string>
    <string name="tv_news">新闻动态</string>
    <string name="tv_other_thing">其他事项</string>
    <string name="tv_device_manager">设备管理</string>
    <string name="tv_warn">超标警报</string>
    <string name="tv_add_device">添加设备</string>
    <string name="tv_temperature">温度</string>
    <string name="tv_params">参数</string>
    <string name="tv_dissolved_oxygen">溶氧</string>
    <string name="tv_ph">PH</string>
    <string name="tv_turbidity">浊度</string>
    <string name="tv_conductivity">电导率</string>
    <string name="tv_grade">水质等级</string>
    <string name="tv_patrol_record">巡查记录</string>
    <string name="tv_location">地点位置</string>
    <string name="tv_select_location">选择位置</string>
    <string name="tv_problem_desc">问题描述</string>
    <string name="tv_hebut">天津市北辰区河北工业大学熙湖</string>
    <string name="tv_add_photo">添加照片</string>
    <string name="tv_common_problem">常见问题</string>
    <string name="tv_policy">政策法规</string>
    <string name="tv_my_flag">治理目标</string>
    <string name="tv_my_assess">考核评估</string>
    <string name="tv_my_grade">获得成就</string>
    <string name="tv_about_app">关于应用</string>
    <string name="tv_river_info">河湖信息</string>
    <string name="todo">TODO</string>
    <string name="tv_user_info">个人资料</string>
</resources>
